# PyTransfer

./: .gitignore  Py Transfer.spec  README.md  build.py  download_icons.py  flet_test.py  main.py  pyproject.toml  settings_manager.py  setup.sh  utils.py
db/: database.py
gui/: __init__.py  left_panel.py  main_window.py  right_panel.py
gui/tabs/: __init__.py  clients_tab.py  clipboard_tab.py  history_tab.py  logs_tab.py  received_tab.py  shared_tab.py
server/: __init__.py  core.py  discovery.py  middleware.py  routes.py  security.py  sync.py  tunnel.py
static/css/: style.css
static/js/: app.js
templates/: dropzone.html  index.html
