[project]
name = "pytransfer"
version = "1.0.0"
description = "Yerel ağ üzerinde hızlı ve güvenli dosya ve pano paylaşım uygulaması"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "flask>=3.0.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "tkinterdnd2>=0.3.0",
    "zeroconf>=0.132.0",
    "watchdog>=6.0.0",
]

[tool.uv]
package = false
